# mtg-prz-rust

./: .gitignore  README  README.md  cards.html  cargo.toml  compare.html  get_pages_no_pages.html  get_pages_page.html  gitignore.txt  index.html  page_1.html  page_2.html  page_3.html  product_search_page.html  scryfall_kort.json  slask.json  sls  test.txt  test_index_page.html
.devcontainer/: .bash_aliases  devcontainer.json  post_create.sh
.github/: dependabot.yml
alphaspel/: index.html  page_1.html  page_2.html  prices.html
db/: sqlite.db
delver_lense_cards/: Draftshaft_2025_Mar_10_17-33.csv
dl_scraper/: Cargo.toml
dragonslair/: index.html  page_1.html  page_2.html  prices.html
magic_card_scraper/: Cargo.toml
magic_card_scraper/src/: alphaspel_scraper.rs  comparer.rs  dragonslair_scraper.rs  html_generator.rs  main.rs  mtg_stock_price_checker.rs  scryfall_scraper.rs
magic_card_scraper/src/cards/: card_parser.rs  cardname.rs  collector_number.rs  colour.rs  compared_card.rs  currency.rs  magicrarity.rs  price.rs  scryfallcard.rs  setname.rs  tradable_card.rs  vendorcard.rs
magic_card_scraper/src/test/: alphaspel.rs  alphaspel_cards_page.html  alphaspel_cards_page_no_extra_pages.html  alphaspel_cards_page_no_extra_pages2.html  alphaspel_starter_page_short.html  get_pages_page.html  helpers.rs  mod.rs  product_search_page.html  test_compared_cards.json
magic_card_scraper/src/tradable_cards/: delver_lense_converter.rs  html_generator.rs  mod.rs  tradable_card_comparer.rs
magic_card_scraper/src/utilities/: config.rs  constants.rs  file_management.rs  mod.rs  string_manipulators.rs
magic_card_scraper/static/nice_price_cards_page/: style.css
magic_card_scraper/static/tradable_cards_page/: filters.js  styles.css
mtg-rust/: .env  Cargo.toml  tradable_cards_03_02_2025-12-43.json  tradable_cards_23_02_2025-17-20.json  tradable_cards_25_02_2025-20-05.json
mtg-rust/alphaspel_cards/: alphaspel_cards_09_09_2024-15-26.json
mtg-rust/compared_prices/: compared_prices_02_09_2024-19:59.json
mtg-rust/src/: config.rs  main.rs
mtg-rust/src/alphaspel/: alphaspel_starter_page.html  card_parser.rs
mtg-rust/src/cards/: card.rs
mtg-rust/src/db/: db.rs
mtg-rust/src/delver_lense/: Testlist_2025_Jan_27_17-02.csv  delver_lense_card.rs  delver_lense_list.csv  html_generator.rs  mod.rs  price.rs  show_tradable_cards.rs
mtg-rust/src/dl/: card_parser.rs  list_links.rs  mod.rs
mtg-rust/src/html/: html_generator.rs
mtg-rust/src/scryfall/: scryfall_mcm_cards.rs
mtg-rust/src/test/: helpers.rs  test_compared_cards.json
mtg-rust/src/tradable_cars/: delver_lense_card.rs  html_generator.rs  mod.rs  show_tradable_cards.rs
mtg-rust/src/utils/: compare_prices.rs  compare_prizes.rs  constants.rs  date_to_string.rs  file_management.rs  mod.rs  mtg_stock_price_checker.rs  price_checker.rs  string_manipulators.rs
mtg-rust/static/js/: filters.js
mtg-rust/static/nice_price_cards_page/: filter.js
mtg-rust/static/tradable_cards_page/: filters.js  styles.css
mtg_rust/: .env  tradable_cards_10_03_2025-20-13.json
(+42 files in other folders)
