[package]
name = "magic_card_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]

arc = "0.0.1"
futures = "0.3.31"
log = "0.4.26"
reqwest = "0.12.15"
scraper = "0.23.1"
tokio = { version = "1.47.1", features = ["full", "test-util"] }
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
regex = "1.11.1"
env_logger = "0.11.7"
chrono = "0.4.40"
lazy_static = "1.5.0"
proflogger = "0.1.2"
tempfile = "3.18.0"
url = "2.5.4"
csv = "1.3.1"
urlencoding = "2.1.3"
async-trait = "0.1.88"

[dev-dependencies]
mockito = "1.6.1"
tracing = "0.1"
tracing-test = "0.2.5"
mockall = "0.13.1"
