[package]
name = "magic_card_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]

arc = "0.0.1"
futures = "0.3.31"
log = "0.4.28"
reqwest = "0.12.24"
scraper = "0.24.0"
tokio = { version = "1.48.0", features = ["full", "test-util"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.2"
env_logger = "0.11.8"
chrono = "0.4.42"
lazy_static = "1.5.0"
proflogger = "0.1.2"
tempfile = "3.23.0"
url = "2.5.7"
csv = "1.4.0"
urlencoding = "2.1.3"
async-trait = "0.1.89"

[dev-dependencies]
mockito = "1.6.1"
tracing = "0.1"
tracing-test = "0.2.5"
mockall = "0.13.1"
