[[bin]]
name = "delver_lense"
path = "src/delver_lense/delver_lense_card.rs"

[package]
name = "mtg-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full", "test-util"] }

futures = "0.3.30"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.20.0"
serde_json = "1.0.125"
serde = { version = "1.0.208", features = ["derive"] }
chrono = "0.4.38"
log = "0.4.22"
url = "2.5.2"
dotenv = "0.15.0"
env_logger = "0.11.5"
tempfile = "3.12.0"
csv = "1.3.1"
[dev-dependencies]
mockito = "1.5.0"
