[package]
name = "mtg-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full", "test-util"] }

futures = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
chrono = "0.4.39"
log = "0.4.25"
url = "2.5.4"
dotenv = "0.15.0"
env_logger = "0.11.6"
tempfile = "3.16.0"
csv = "1.3.1"
itertools = "0.14.0"
urlencoding = "2.1.3"
rusqlite = { version = "0.33.0", features = ["bundled",] }
strum_macros = "0.27.1"
lazy_static = "1.4"


[dev-dependencies]
mockito = "1.6.1"
